Adding Some Style

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,3 +1,28 @@
 body {
-    background-color: red;
+    font-family:Nunito, "Times New Roman", serif;
+    background-color: rgb(77, 172, 240);
+    color:rgb(12, 12, 12);
+    font-size: 25pt;
+}
+h1, h2, h3, h4, h5,h6{
+    font-family:Sofadi, Arial, sans-serif;
+    font-size:45pt; 
+}
+header {
+    text-align:center;
+}
+#hero, footer {
+    text-align:center;
+    color: rgb(3, 3, 3);
+    background-color: rgba(113, 4, 35, 0.99);
+    padding: 10px;
+    border: 20px groove rgb(4, 52, 141);
+    border: radius 10px;
+}
+#hero img {
+    width:230px;
+    box-shadow: 25px 25px 25px black
+}
+#bio {
+    text-align: center; 
 }
